--- a/osm-renderd/apache/sites/osm-tiles.conf
+++ b/osm-renderd/apache/sites/osm-tiles.conf
@@ -3,4 +3,11 @@
 	ModTileRenderdSocketName /var/run/renderd/renderd.sock
 	ModTileRequestTimeout 60
 	ModTileMissingRequestTimeout 30
+
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/html
+
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+
 </VirtualHost>
