--- a/fill-osm-db/Dockerfile
+++ b/fill-osm-db/Dockerfile
@@ -11,6 +11,10 @@ RUN apt-get update -y \
     && rm -rf /var/lib/apt/lists/* /root/.cache
 
 ADD scripts /opt/scripts
+RUN chmod u+x /opt/scripts/init/*.sh \
+	&& chmod u+x /opt/scripts/update/*.sh \
+	&& mkdir /var/log/osm
+WORKDIR /opt/scripts/
 
 ENTRYPOINT ["/bin/bash", "/opt/scripts/entrypoint.sh"]
 CMD ["--help"]
