--- a/fill-osm-db/Dockerfile
+++ b/fill-osm-db/Dockerfile
@@ -5,7 +5,7 @@ ENV PGVERSION 9.5
 
 RUN apt-get update -y \
     && apt-get upgrade -y \
-    && apt-get install --no-install-recommends -y postgresql-client-${PGVERSION} curl osm2pgsql \
+    && apt-get install --no-install-recommends -y postgresql-client-${PGVERSION} curl osm2pgsql osmosis bzip2 \
     && apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* /root/.cache
@@ -13,8 +13,10 @@ RUN apt-get update -y \
 ADD scripts /opt/scripts
 RUN chmod u+x /opt/scripts/init/*.sh \
 	&& chmod u+x /opt/scripts/update/*.sh \
-	&& mkdir /var/log/osm
-WORKDIR /opt/scripts/
+	&& mkdir /var/log/osm \
+  && mkdir /var/cache/osmdata
+VOLUME ["/var/cache/osmdata/"]
 
+WORKDIR /opt/scripts/
 ENTRYPOINT ["/bin/bash", "/opt/scripts/entrypoint.sh"]
 CMD ["--help"]
